Correctly wrapping inside frames of filmstrip. Decreased spacing overall by half.

--- a/css/jqface.less
+++ b/css/jqface.less
@@ -256,7 +256,7 @@
 .jqf-filmstrip {
   .jqf-font;
   display:block;
-  margin: 0 10px 10px 0;
+  margin: 10px 0;
   white-space: nowrap;
   .jqf-view {
     .jqf-border;
@@ -264,7 +264,7 @@
     .jqf-inline-block;
     background-color: @background-color;
     border-color: lightgray;
-    margin: 0 10px;
+    margin: 0 5px;
     overflow: hidden;
     position: relative;
     vertical-align: middle;
@@ -272,7 +272,7 @@
       font-size: 0;
       left: 0;
       position: absolute;
-      top: 10px;
+      top: 5px;
       white-space: nowrap;
       .jqf-frame {
         .jqf-border;
@@ -280,8 +280,9 @@
         .jqf-inline-block;
         background-color: white;
         border-color: lightgray;
-        padding: 10px;
-        margin-left: 10px;
+        padding: 5px;
+        margin-left: 5px;
+        white-space: normal;
       }
     }
   }
